tests/nala/error/runtime/nested-types.nl

func bad(arg: Bool<String>) {
    print('break');
}

bad(false);